--- a/src/components/Account/Account.css
+++ b/src/components/Account/Account.css
@@ -13,7 +13,7 @@
   align-items: center;
   justify-content: center;
   font-weight: 700;
-  background-image: url("https://catherineasquithgallery.com/uploads/posts/2021-02/1613019846_95-p-oranzhevii-fon-s-babochkami-122.jpg");
+  background-image: url("../../img/back.jpg");
   border-radius: 10px;
   box-shadow: 0px 0px 18px 6px rgba(232, 96, 7, 0.5);
   width: 50em;
