--- a/src/components/Account/Account.less
+++ b/src/components/Account/Account.less
@@ -14,7 +14,7 @@
         justify-content: center;
         font-weight: 700;
         // background-color: #FF6700;
-        background-image: url("https://catherineasquithgallery.com/uploads/posts/2021-02/1613019846_95-p-oranzhevii-fon-s-babochkami-122.jpg");
+        background-image: url("../../img/back.jpg");
         border-radius: 10px;
         box-shadow: 0px 0px 18px 6px rgba(232, 96, 7, 0.5);
         width: 50em;
