--- a/src/components/Account/Account.less
+++ b/src/components/Account/Account.less
@@ -1,3 +1,10 @@
+body {
+    background-image: url("../../img/backgr.png");
+    background-repeat: no-repeat;
+
+    background-size: cover;
+}
+
 .checkAccount {
     position: absolute;
     left: 50%;
@@ -12,14 +19,10 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        font-weight: 700;
+        font-weight: 500;
         // background-color: #FF6700;
-        background-image: url("../../img/back.jpg");
-        border-radius: 10px;
-        box-shadow: 0px 0px 18px 6px rgba(232, 96, 7, 0.5);
-        width: 50em;
-        height: 80px;
-        font-size: 20px;
+        margin-top: 50px;
+        font-size: 16px;
     }
 
     .dogInfo{
@@ -28,13 +31,39 @@
         justify-content: center;
         flex-direction: column;
 
-        .dogImg {
-            margin-top: 30px;
-        }
         .dogCoin {
-            margin-top: 30px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 5px;
             font-size: 32px;
             font-weight: 700;
+
+            p {
+                margin-top: 10px;
+            }
+        }
+
+        .status {
+            font-size: 16px;
+            margin-top: 30px;
+            display: flex;
+            gap: 5px;
+            
+            justify-content: center;
         }
     }
+
+}
+
+.panel {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end; 
+    align-self: stretch;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #161616;
 }
