--- a/src/components/Loading/Loading.less
+++ b/src/components/Loading/Loading.less
@@ -13,4 +13,11 @@
     .text {
       font-size: 24px;
     }
+
+    .loader{
+      svg path,
+      svg rect{
+        fill: #FF0006;
+      }
+    }
   }
