--- a/src/components/Account/Account.css
+++ b/src/components/Account/Account.css
@@ -79,6 +79,43 @@ body {
   box-shadow: 0px 0px 5px 5px rgba(244, 237, 30, 0.2);
   border-radius: 100%;
 }
+.tap .energyBar {
+  display: flex;
+  position: fixed;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  bottom: 120px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.tap .energyBar .energyText {
+  font-weight: 600;
+  gap: 5px;
+  display: grid;
+  grid-auto-flow: column;
+  align-items: center;
+}
+.tap .energyBar .backgroundBar {
+  display: block;
+  margin: auto;
+  position: relative;
+  background-color: #32363C;
+  border-radius: 10px;
+  width: 300px;
+  max-width: 100%;
+}
+.tap .energyBar .backgroundBar .bar {
+  display: block;
+  position: relative;
+  background: linear-gradient(270deg, #F7C243, #FD902B);
+  width: 300px;
+  height: 15px;
+  border-radius: 10px;
+  border: 2px solid;
+  border-color: #32363C;
+}
 .panel {
   width: 100%;
   height: 86px;
