--- a/src/components/Account/Account.css
+++ b/src/components/Account/Account.css
@@ -1,5 +1,4 @@
 body {
-  background-image: url("../../img/backgr.png");
   background-repeat: no-repeat;
   background-size: 100% auto;
 }
@@ -79,6 +78,13 @@ body {
   box-shadow: 0px 0px 5px 5px rgba(244, 237, 30, 0.2);
   border-radius: 100%;
 }
+.tap > img {
+  display: flex;
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
+}
 .tap .energyBar {
   display: flex;
   position: fixed;
@@ -116,6 +122,70 @@ body {
   border: 2px solid;
   border-color: #32363C;
 }
+.homeAccount {
+  position: absolute;
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+.homeAccount .score {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+.homeAccount .score .info {
+  margin-top: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  width: 100%;
+}
+.homeAccount .score .info > img {
+  filter: drop-shadow(0 0 5px #e9c00a);
+}
+.homeAccount .score .info > p {
+  font-size: 40px;
+  font-weight: 600;
+}
+.homeAccount .account {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 20px;
+  width: 90%;
+}
+.homeAccount .account .accountInfo {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.homeAccount .account .accountInfo .accountInfoText > p {
+  font-size: 14px;
+  font-weight: 500;
+}
+.homeAccount .account .accountInfo .accountInfoText > span {
+  color: gray;
+  font-size: 13px;
+}
+.homeAccount .account .place {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+.homeAccount .account .place > p {
+  color: #b51310cc;
+  font-size: 12px;
+}
+.homeAccount .account .place > span {
+  color: #B51310;
+  font-size: 15px;
+}
 .panel {
   width: 100%;
   height: 86px;
@@ -126,6 +196,7 @@ body {
   justify-content: center;
   flex-wrap: wrap;
   background-color: #161616;
+  cursor: pointer;
 }
 .panel.fill > [nav-id] {
   flex-grow: 1;
@@ -148,6 +219,9 @@ body {
 }
 .panel > [nav-id].active {
   color: #B51310;
+}
+.panel > [nav-id].active > i svg path {
+  fill: #B51310;
 }
 .panel > [nav-id].active > span.tapbtn {
   color: #E6A932;
