--- a/src/components/Account/Account.less
+++ b/src/components/Account/Account.less
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../../img/backgr.png");
+    // background-image: url("../../img/backgr.png");
     background-repeat: no-repeat;
 
     background-size: 100% auto;
@@ -96,6 +96,14 @@ body {
 
 .tap {
 
+    > img {
+        display: flex;
+        position: absolute;
+        width: 100%;
+        height: 100vh;
+        z-index: -1;
+    }
+
     .energyBar {
         
         display: flex;
@@ -139,6 +147,84 @@ body {
     }
 }
 
+.homeAccount {
+    position: absolute;
+    // transform: translate(-50%,0%);
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+
+    .score {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+
+        .info {
+            
+            margin-top: 5px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+            width: 100%;
+
+            > img {
+                filter: drop-shadow(0 0 5px #e9c00a);
+            }
+
+            > p {
+                font-size: 40px;
+                font-weight: 600;
+            }
+        }
+    }
+
+    .account {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 20px;
+        width: 90%;
+
+        .accountInfo {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            .accountInfoText {
+                > p {
+                    font-size: 14px;
+                    font-weight: 500;
+                }
+                > span {
+                    color: gray;
+                    font-size: 13px;
+                }
+            }
+        }
+
+        .place {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            
+
+            > p {
+                color:#b51310cc;
+                font-size: 12px;
+            }
+            > span {
+                color:#B51310;
+                font-size: 15px;
+            }
+        }
+    }
+}
+
 .panel {
     // display: flex;
     // flex-direction: column;
@@ -156,6 +242,7 @@ body {
     justify-content: center;
     flex-wrap: wrap;
     background-color: #161616;
+    cursor: pointer;
 
     &.fill {
         > [nav-id]{
@@ -182,6 +269,13 @@ body {
 
         &.active {
             color: #B51310;
+
+            > i {
+                svg path{
+                    fill: #B51310;
+                }
+            }
+
             > span.tapbtn {
                 color: #E6A932;
             }
