--- a/src/components/Account/Account.less
+++ b/src/components/Account/Account.less
@@ -174,6 +174,7 @@ body {
             width: 100%;
 
             > img {
+                border-radius: 50px;
                 filter: drop-shadow(0 0 5px #e9c00a);
             }
 
