--- a/src/components/Account/Account.less
+++ b/src/components/Account/Account.less
@@ -173,7 +173,7 @@ body {
             gap: 10px;
             width: 100%;
 
-            > img {
+            > div img {
                 border-radius: 50px;
                 filter: drop-shadow(0 0 5px #e9c00a);
             }
