--- a/src/App.less
+++ b/src/App.less
@@ -6,7 +6,17 @@
   box-sizing: border-box;
   font-family: "Montserrat";
   overflow-x: hidden;
-  user-select: none;
+  
+}
+
+.unselectable {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none;   /* Chrome/Safari/Opera */
+  -khtml-user-select: none;    /* Konqueror */
+  -moz-user-select: none;      /* Firefox */
+  -ms-user-select: none;       /* Internet Explorer/Edge */
+  user-select: none;           /* Non-prefixed version, currently
+                                  not supported by any browser */
 }
 
 body {
