--- a/src/App.css
+++ b/src/App.css
@@ -130,6 +130,7 @@
   box-sizing: border-box;
   font-family: "Montserrat";
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 .unselectable {
   -webkit-touch-callout: none;
