--- a/src/App.css
+++ b/src/App.css
@@ -130,7 +130,13 @@
   box-sizing: border-box;
   font-family: "Montserrat";
   overflow-x: hidden;
-  overflow-y: hidden;
+  overflow: scroll;
+}
+::-webkit-scrollbar {
+  width: 0px;
+  /* remove scrollbar space */
+  background: transparent;
+  /* optional: just make scrollbar invisible */
 }
 .unselectable {
   -webkit-touch-callout: none;
