--- a/src/App.less
+++ b/src/App.less
@@ -6,9 +6,13 @@
   box-sizing: border-box;
   font-family: "Montserrat";
   overflow-x: hidden;
-  overflow-y: hidden;
+  overflow: scroll;
 }
 
+::-webkit-scrollbar {
+  width: 0px;  /* remove scrollbar space */
+  background: transparent;  /* optional: just make scrollbar invisible */
+}
 .unselectable {
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none;   /* Chrome/Safari/Opera */
