--- a/src/components/Account/Account.css
+++ b/src/components/Account/Account.css
@@ -335,6 +335,101 @@ body {
   display: block;
   position: absolute;
 }
+.friendsAccount {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+.friendsAccount .friendsInfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 90%;
+  gap: 30px;
+}
+.friendsAccount .friendsInfo .infoCard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.friendsAccount .friendsInfo .infoCard > p {
+  font-size: 17px;
+  font-weight: 500;
+}
+.friendsAccount .friendsInfo .infoCard .statistic {
+  margin-top: 15px;
+  display: flex;
+  align-items: end;
+  gap: 10px;
+}
+.friendsAccount .friendsInfo .infoCard .statistic > p {
+  font-size: 40px;
+  font-weight: 700;
+}
+.friendsAccount .referalInfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 90%;
+  margin-top: 40px;
+}
+.friendsAccount .referalInfo .referalText {
+  font-size: 17px;
+  font-weight: 400;
+  color: #acacac;
+  line-height: 1.5;
+}
+.friendsAccount .referalInfo .details {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 20px;
+  width: 100%;
+}
+.friendsAccount .referalInfo .details .textField {
+  display: flex;
+  width: 100%;
+  background-color: #1f1f1f;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  border: 1px solid #3a3a3a;
+}
+.friendsAccount .referalInfo .details .textField .text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  padding: 10px;
+}
+.friendsAccount .referalInfo .details .textField .text p {
+  color: #c0c0c0;
+  font-size: 12px;
+}
+.friendsAccount .referalInfo .details .btn {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  background: linear-gradient(to bottom, rgba(255, 0, 6, 0.42) 0%, rgba(0, 0, 0, 0) 100%, transparent 100%);
+  border: 1px solid #790b0a;
+  width: 100%;
+  border-radius: 7px;
+  user-select: text;
+}
+.friendsAccount .referalInfo .details .btn p {
+  font-weight: 500;
+  padding: 15px;
+}
 .panel {
   width: 100%;
   height: 86px;
