--- a/src/components/Account/Account.css
+++ b/src/components/Account/Account.css
@@ -30,7 +30,6 @@ body {
 }
 .checkAccount {
   position: absolute;
-  transform: translate(-50%, 0%);
   margin-top: auto;
   display: flex;
   flex-direction: column;
@@ -72,11 +71,15 @@ body {
 }
 .checkAccount .coin {
   display: flex;
-  padding-top: 50px;
+  align-items: center;
+  justify-content: center;
+  padding-top: 80px;
+  width: 100%;
 }
 .checkAccount .coin img {
   box-shadow: 0px 0px 5px 5px rgba(244, 237, 30, 0.2);
   border-radius: 100%;
+  transition: 0.1s;
 }
 .tap > img {
   display: flex;
@@ -92,9 +95,10 @@ body {
   gap: 10px;
   align-items: center;
   justify-content: center;
-  bottom: 120px;
+  bottom: 14%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 100%;
 }
 .tap .energyBar .energyText {
   font-weight: 600;
@@ -107,20 +111,21 @@ body {
   display: block;
   margin: auto;
   position: relative;
-  background-color: #32363C;
+  background-color: inherit;
+  height: 11px;
   border-radius: 10px;
-  width: 300px;
-  max-width: 100%;
+  width: 90%;
+  border: 0.5px solid rgba(255, 255, 255, 0.5);
+  box-shadow: 2px 2px 6.8px #fff inset;
 }
 .tap .energyBar .backgroundBar .bar {
-  display: block;
-  position: relative;
-  background: linear-gradient(270deg, #F7C243, #FD902B);
-  width: 300px;
-  height: 15px;
+  transition: 0.1s;
+  height: 100%;
+  background: linear-gradient(170deg, #f7c243 7.58%, #fd902b 69.55%), linear-gradient(95deg, #f9e160, #e5a322 76.82%), #32363c;
   border-radius: 10px;
-  border: 2px solid;
-  border-color: #32363C;
+}
+.fadeAnim {
+  animation: fade 0.5s ease-out;
 }
 .homeAccount {
   position: absolute;
@@ -430,6 +435,62 @@ body {
   font-weight: 500;
   padding: 15px;
 }
+.ratingAccount {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+.ratingAccount .account {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 20px;
+  width: 90%;
+}
+.ratingAccount .account .accountInfo {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.ratingAccount .account .accountInfo .accountInfoText > p {
+  font-size: 14px;
+  font-weight: 400;
+}
+.ratingAccount .account .accountInfo .accountInfoText > span {
+  color: gray;
+  font-size: 13px;
+}
+.ratingAccount .ratingText {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  margin-top: 30px;
+}
+.ratingAccount .ratingText > p {
+  color: #999999;
+  font-weight: 400;
+}
+.ratingAccount .leaderBoard {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  margin-top: 70px;
+}
+.ratingAccount .leaderBoard .leaderBoardText > p {
+  font-size: 12px;
+  color: #B51310;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+.ratingAccount .leaderBoard .leaderBoardText > span {
+  display: flex;
+  justify-content: center;
+  font-size: 12px;
+  color: #8d8d8d;
+}
 .panel {
   width: 100%;
   height: 86px;
@@ -495,4 +556,15 @@ body {
 }
 .panel.no-label > button.active > span {
   height: 20px;
+}
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  1% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
