--- a/src/components/Account/Account.css
+++ b/src/components/Account/Account.css
@@ -491,6 +491,10 @@ body {
   font-size: 12px;
   color: #8d8d8d;
 }
+.ratingAccount .leaderBoard .leaderBoardContainer {
+  overflow: scroll;
+  height: 40vh;
+}
 .panel {
   width: 100%;
   height: 86px;
