--- a/src/components/Account/Account.less
+++ b/src/components/Account/Account.less
@@ -588,6 +588,13 @@ body {
                 color:#8d8d8d;
             }
         }
+
+        .leaderBoardContainer {
+            overflow: scroll;
+            height: 40vh;
+
+            
+        }
     }
 
 }
