--- a/src/components/Account/Account.less
+++ b/src/components/Account/Account.less
@@ -34,6 +34,7 @@ body {
 }
 
 .checkAccount {
+    touch-action: none;
     position: absolute;
     // transform: translate(-50%,0%);
     margin-top: auto;
@@ -99,7 +100,7 @@ body {
 }
 
 .tap {
-
+    touch-action: none;
     > img {
         display: flex;
         position: absolute;
@@ -165,6 +166,7 @@ body {
 }
 
 .homeAccount {
+    touch-action: none;
     position: absolute;
     // transform: translate(-50%,0%);
     margin-top: 50px;
@@ -244,6 +246,7 @@ body {
 }
 
 .referal {
+    touch-action: none;
     margin-top: 30px;
     display: flex;
     flex-direction: column;
@@ -330,6 +333,7 @@ body {
     flex-direction: column;
     // align-items: center;
     width: 100%;
+    touch-action: none;
 
     .taskCard {
         display: flex;
@@ -415,6 +419,7 @@ body {
 }
 
 .friendsAccount {
+    touch-action: none;
     margin-top: 50px;
     display: flex;
     flex-direction: column;
@@ -531,6 +536,7 @@ body {
     align-items: center;
     justify-content: center;
     width: 100%;
+    touch-action: none;
 
     .account {
         display: flex;
