--- a/src/App.less
+++ b/src/App.less
@@ -7,6 +7,7 @@
   font-family: "Montserrat";
   overflow-x: hidden;
   // overflow: scroll;
+  -webkit-tap-highlight-color: rgba(202, 25, 25, 0.199);
 }
 
 .unselectable {
