--- a/src/components/Account/Account.css
+++ b/src/components/Account/Account.css
@@ -437,7 +437,6 @@ body {
   border: 1px solid #790b0a;
   width: 100%;
   border-radius: 7px;
-  user-select: text;
 }
 .friendsAccount .referalInfo .details .btn p {
   font-weight: 500;
@@ -503,6 +502,84 @@ body {
 .ratingAccount .leaderBoard .leaderBoardContainer {
   overflow: scroll;
   height: 40vh;
+}
+.taskContainer {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  flex-direction: column;
+  margin-top: 50px;
+}
+.taskContainer .taskTop {
+  display: flex;
+  align-items: center;
+  width: 90%;
+  gap: 20px;
+}
+.taskContainer .taskTop > p {
+  width: 260px;
+  font-size: 20px;
+  font-weight: 500;
+}
+.taskContainer .taskBottom {
+  display: flex;
+  width: 90%;
+  flex-direction: column;
+}
+.taskContainer .taskBottom .taskInfo {
+  display: flex;
+  flex-direction: column;
+  margin-top: 25px;
+}
+.taskContainer .taskBottom .taskInfo > p {
+  color: #919191;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 1.5;
+}
+.taskContainer .taskBottom .taskButtons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px;
+}
+.taskContainer .taskBottom .taskButtons .textField {
+  cursor: pointer;
+  display: flex;
+  width: 100%;
+  background-color: #1f1f1f;
+  align-items: center;
+  justify-content: center;
+  border-radius: 7px;
+  border: 1px solid #3a3a3a;
+}
+.taskContainer .taskBottom .taskButtons .textField .text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  padding: 15px;
+}
+.taskContainer .taskBottom .taskButtons .textField .text p {
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 500;
+}
+.taskContainer .taskBottom .taskButtons .btn {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  background: linear-gradient(to bottom, rgba(255, 0, 6, 0.42) 0%, rgba(0, 0, 0, 0) 100%, transparent 100%);
+  border: 1px solid #790b0a;
+  width: 100%;
+  border-radius: 7px;
+}
+.taskContainer .taskBottom .taskButtons .btn p {
+  font-weight: 500;
+  padding: 15px;
 }
 .panel {
   width: 100%;
