--- a/src/components/Account/Account.less
+++ b/src/components/Account/Account.less
@@ -518,7 +518,7 @@ body {
                 border: 1px solid #790b0a;
                 width: 100%;
                 border-radius: 7px;
-                user-select: text;
+                
     
                 p {
                     font-weight: 500;
@@ -603,6 +603,97 @@ body {
         }
     }
 
+}
+
+.taskContainer {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    flex-direction: column;
+    margin-top: 50px;
+
+    .taskTop {
+        display: flex;
+        align-items: center;
+        width: 90%;
+        gap: 20px;
+
+        > p {
+            width: 260px;
+            font-size: 20px;
+            font-weight: 500;
+        }
+    }
+
+    .taskBottom {
+        display: flex;
+        width: 90%;
+        flex-direction: column;
+
+        .taskInfo {
+            display: flex;
+            flex-direction: column;
+            margin-top: 25px;
+
+            > p {
+                color: rgb(145, 145, 145);
+                font-size: 17px;
+                font-weight: 400;
+                line-height: 1.5;
+            }
+        }
+
+        .taskButtons {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin-top: 30px;
+
+            .textField {
+                cursor: pointer;
+                display: flex;
+                width: 100%;
+                background-color: #1f1f1f;
+                align-items: center;
+                justify-content: center;
+                border-radius: 7px;
+                border: 1px solid #3a3a3a;
+    
+                .text {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    gap: 5px;
+                    padding: 15px;
+    
+                    p {
+                        color: #ffffff;
+                        font-size: 16px;
+                        font-weight: 500;
+                    }
+                }
+            }
+    
+            .btn {
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                margin-top: 20px;
+                background: linear-gradient(to bottom, rgba(255,0,6,0.42) 0%, rgba(0,0,0,0) 100%, transparent 100%);
+                border: 1px solid #790b0a;
+                width: 100%;
+                border-radius: 7px;
+                
+    
+                p {
+                    font-weight: 500;
+                    padding: 15px;
+                }
+            }
+        }
+    }
 }
 
 .panel {
